# sie_mpctl

./: .gitignore  CMakeLists.txt
src/: config_data.c  config_loader.c  main.c
